// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Advanced compilation extensions should compile async extensions 1`] = `
"<div id=\\"el100500\\">(async): 
  This content will be replaced with the content from /stuff
</div>


    <div>
        <div id=\\"el100500\\">(async): 
          Content 1
        </div>
    </div>

    <div>
        <div id=\\"el100500\\">(async): 
          Content 2
        </div>
    </div>

"
`;

exports[`Advanced compilation extensions should compile custom tags 1`] = `
"<div id=\\"el100500\\">
  This content will be replaced with the content from /stuff
</div>


"
`;

exports[`Advanced compilation extensions should compile custom tags from parent template 1`] = `
"<div id=\\"el100500\\">
  This content will be replaced with the content from /stuff
</div>


<p>Child template for custom tag check</p>

"
`;

exports[`Advanced compilation extensions should compile multiple instances of same tag 1`] = `
"<div id=\\"el100500\\">
  This content will be replaced with the content from /stuff
</div>


    <div>
        <div id=\\"el100500\\">
          Content 1
        </div>
    </div>

    <div>
        <div id=\\"el100500\\">
          Content 2
        </div>
    </div>

"
`;

exports[`Advanced compilation filters should compile async filters 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\">
    <title>Foobar 100510</title>
  </head>
  <body>
    
    <p>100506</p>

  </body>
</html>
"
`;

exports[`Advanced compilation filters should compile filters in inherited templates 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\">
    <title>Foobar 52</title>
  </head>
  <body>
    
    <p>48</p>

  </body>
</html>
"
`;

exports[`Advanced compilation filters should compile multiple instances of same filter 1`] = `
"15
8
"
`;

exports[`Advanced compilation filters should compile single filter instance 1`] = `
"15
"
`;

exports[`Advanced compilation globals should compile globals in parent templates 1`] = `
"<div>

globals returned value
</div>

Child template

"
`;

exports[`Advanced compilation globals should compile multiple instances of same global 1`] = `
"<div>

globals returned value
</div>

<div>
    Occurrence #1

    
    globals returned value
</div>

<div>
    Occurrence #2

    
    globals returned value
</div>

"
`;

exports[`Advanced compilation globals should compile with given globals 1`] = `
"<div>

globals returned value
</div>

"
`;

exports[`Advanced compilation should compile templates with non-relative paths 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
    <meta charset=\\"UTF-8\\">
    <title></title>
</head>
<body>

    

<main>
    

<p>Main content</p>


</main>



</body>
</html>
"
`;

exports[`Simple compilation should compile builtin tags 1`] = `
"<main>
    <h1><a href=\\"\\">Parent</a></h1>

    
    
      I am tired
    

</main>
"
`;

exports[`Simple compilation should compile macro 1`] = `
"<main>
    <h1><a href=\\"\\">Parent</a></h1>

    
    
<div class=\\"field\\">
  <input type=\\"text\\" name=\\"user\\"
         value=\\"\\" />
</div>

    
<div class=\\"field\\">
  <input type=\\"password\\" name=\\"pass\\"
         value=\\"\\" />
</div>


</main>
"
`;

exports[`Simple compilation should compile single files 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
    <meta charset=\\"UTF-8\\">
    <title>App</title>
</head>
<body>

    <a href=\\"https://example.com\\">Link</a>

</body>
</html>
"
`;

exports[`Simple compilation should compile templates with filters 1`] = `
"<main>
    <h1><a href=\\"\\">Parent</a></h1>

    
    Nunjucks barlter

</main>
"
`;

exports[`Simple compilation should compile templates with inheritance 1`] = `
"<main>
    <h1><a href=\\"https://example.com/1\\">Parent</a></h1>

    
    <p>Child template</p>
    <a href=\\"https://example.com/2\\">Link</a>

</main>
"
`;

exports[`Simple compilation should compile templates with multiple includes 1`] = `
"<main>
    <h1><a href=\\"https://example.com/parent\\">Parent</a></h1>

    
    <p>
        <button>Button</button>

    </p>

    <button>Button</button>


</main>
"
`;

exports[`Simple compilation should inherit from parent with super 1`] = `
"<main>
    <h1><a href=\\"\\">Parent</a></h1>

    
    Super babe

    meets child Joe

</main>
"
`;

exports[`Simple compilation should install Jinja compat 1`] = `
"True
"
`;
